Revert "add German translation to ressources"
This reverts commit 6b361763e8581e51337091aa140420afd956586a.
Fixes my build problem while not runing the l* tools automatically.

Change-Id: I79867a0d07f805dc126c86f63ffcd950375ee106
Reviewed-by: Karsten Heimrich <karsten.heimrich@nokia.com>

--- a/installerbuilder/installerbase/installerbase.qrc
+++ b/installerbuilder/installerbase/installerbase.qrc
@@ -1,6 +1,4 @@
-<RCC>
-    <qresource prefix="/">
-        <file>translations/de_de.qm</file>
-        <file>translations/qt_de.qm</file>
-    </qresource>
+<!DOCTYPE RCC><RCC version="1.0">
+<qresource>
+</qresource>
 </RCC>
