enable German translation again
Change-Id: Ib4b92039bfcabe4ae18a440daba4f88995378f70
Reviewed-by: Tim Jenssen <tim.jenssen@nokia.com>

--- a/installerbuilder/installerbase/installerbase.qrc
+++ b/installerbuilder/installerbase/installerbase.qrc
@@ -1,4 +1,6 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>translations/de_de.qm</file>
+        <file>translations/qt_de.qm</file>
+    </qresource>
 </RCC>
