--- a/installerbuilder/installerbase/installerbase.qrc
+++ b/installerbuilder/installerbase/installerbase.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>translations/de_de.qm</file>
         <file>translations/qt_de.qm</file>
+        <file>translations/en_us.qm</file>
     </qresource>
 </RCC>
