Incorporate following changes to support Qt5.
d5e0dd38ead398d5be8126b4f21c0a50b7b61b17
72000567377d52d5d6e0db2b5d5b95407d85bbc1

Change-Id: I413f6f0ace095dc0d4b375cf392f8878e97ac27c
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>

--- a/src/libs/installer/resources/patch_file_lists.qrc
+++ b/src/libs/installer/resources/patch_file_lists.qrc
@@ -3,5 +3,8 @@
         <file>files-to-patch-linux</file>
         <file>files-to-patch-windows</file>
         <file>files-to-patch-macx</file>
+        <file>files-to-patch-linux-qt5</file>
+        <file>files-to-patch-windows-qt5</file>
+        <file>files-to-patch-macx-qt5</file>
     </qresource>
 </RCC>
