Add ru translation.
Change-Id: Ic4e3f1c4099c4ff187eb4c81b66baf44da7b9e51
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>
Reviewed-by: Niels Weber <niels.weber@digia.com>

--- a/src/sdk/installerbase.qrc
+++ b/src/sdk/installerbase.qrc
@@ -3,5 +3,7 @@
         <file>translations/de_de.qm</file>
         <file>translations/qt_de.qm</file>
         <file>translations/en_us.qm</file>
+        <file>translations/ru_ru.qm</file>
+        <file>translations/qt_ru.qm</file>
     </qresource>
 </RCC>
