Make loading of config.xml more strict
Explicitly check for unknown elements & attributes when loading
config.xml.

Change-Id: I31e6997b2f7d504e15dd24df2f4ae4005209168f
Reviewed-by: Niels Weber <niels.weber@digia.com>
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>

--- a/tests/auto/installer/settings/settings.qrc
+++ b/tests/auto/installer/settings/settings.qrc
@@ -1,6 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>data/tutorial_config.xml</file>
+        <file>data/empty_config.xml</file>
+        <file>data/full_config.xml</file>
         <file>data/malformed_config.xml</file>
+        <file>data/minimal_config.xml</file>
+        <file>data/tutorial_config.xml</file>
+        <file>data/unknown_element_config.xml</file>
     </qresource>
 </RCC>
