Add missing files into paths_file_lists.qrc
Embedded specific files were missing from the resource file thus
not included in builds.

Change-Id: Ib96a7036182399bed5f8a3f9d703cf4e1b850ccd
Reviewed-by: Samuli Piippo <samuli.piippo@digia.com>
Reviewed-by: Niels Weber <niels.weber@digia.com>
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>

--- a/src/libs/installer/resources/patch_file_lists.qrc
+++ b/src/libs/installer/resources/patch_file_lists.qrc
@@ -6,5 +6,7 @@
         <file>files-to-patch-linux-qt5</file>
         <file>files-to-patch-windows-qt5</file>
         <file>files-to-patch-macx-qt5</file>
+        <file>files-to-patch-linux-emb-arm</file>
+        <file>files-to-patch-windows-emb-arm</file>
     </qresource>
 </RCC>
