Add missing files-to-patch-emb-arm into resource list
Also updated the content of the list.

Change-Id: I4fc04b63868e1e41c15c80094c6e459b1686acf9
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>

--- a/src/libs/installer/resources/patch_file_lists.qrc
+++ b/src/libs/installer/resources/patch_file_lists.qrc
@@ -3,5 +3,6 @@
         <file>files-to-patch-linux</file>
         <file>files-to-patch-windows</file>
         <file>files-to-patch-macx</file>
+        <file>files-to-patch-linux-emb-arm</file>
     </qresource>
 </RCC>
