Add separate files-to-patch for embedded Windows packages
E.g. this is needed for Android packages on Windows. Files that need
to be patched differ from those that get patched for desktop targets.

Change-Id: Iac58091729fe207c64aa17d4b946e170716677cf
Reviewed-by: Niels Weber <niels.weber@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>

--- a/src/libs/installer/resources/patch_file_lists.qrc
+++ b/src/libs/installer/resources/patch_file_lists.qrc
@@ -4,5 +4,6 @@
         <file>files-to-patch-windows</file>
         <file>files-to-patch-macx</file>
         <file>files-to-patch-linux-emb-arm</file>
+        <file>files-to-patch-windows-emb-arm</file>
     </qresource>
 </RCC>
