--- a/tests/auto/installer/scriptengine/scriptengine.qrc
+++ b/tests/auto/installer/scriptengine/scriptengine.qrc
@@ -3,5 +3,6 @@
         <file>data/auto-install.qs</file>
         <file>data/component1.qs</file>
         <file>data/component2.qs</file>
+        <file>data/broken_connect.qs</file>
     </qresource>
 </RCC>
