Adding the translation for zh_cn.
Change-Id: I2d8b8f9b4ce5a1818955ee6c9ccd53a16f594187
Reviewed-by: Niels Weber <niels.weber@digia.com>
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>

--- a/src/sdk/installerbase.qrc
+++ b/src/sdk/installerbase.qrc
@@ -5,5 +5,7 @@
         <file>translations/en_us.qm</file>
         <file>translations/ru_ru.qm</file>
         <file>translations/qt_ru.qm</file>
+        <file>translations/zh_cn.qm</file>
+        <file>translations/qt_zh_CN.qm</file>
     </qresource>
 </RCC>
