--- a/src/libs/installer/resources/patch_file_lists.qrc
+++ b/src/libs/installer/resources/patch_file_lists.qrc
@@ -8,5 +8,6 @@
         <file>files-to-patch-macx-qt5</file>
         <file>files-to-patch-linux-emb-arm</file>
         <file>files-to-patch-windows-emb-arm</file>
+        <file>files-to-patch-macx-emb-arm</file>
     </qresource>
 </RCC>
