Add separate files-to-patch list for Qt5 in embedded arm
This includes .pri and .cmake files which can have
original build dir in them.

Change-Id: I62120a1233d516dcfd163da531d72285bdc578b0
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>
Reviewed-by: Iikka Eklund <iikka.eklund@digia.com>

--- a/src/libs/installer/resources/patch_file_lists.qrc
+++ b/src/libs/installer/resources/patch_file_lists.qrc
@@ -9,5 +9,6 @@
         <file>files-to-patch-linux-emb-arm</file>
         <file>files-to-patch-windows-emb-arm</file>
         <file>files-to-patch-macx-emb-arm</file>
+        <file>files-to-patch-linux-emb-arm-qt5</file>
     </qresource>
 </RCC>
