--- a/src/sdk/installerbase.qrc
+++ b/src/sdk/installerbase.qrc
@@ -1,13 +1,13 @@
 <RCC>
     <qresource prefix="/">
-        <file>translations/de_de.qm</file>
+        <file alias="translations/de_DE.qm">translations/de_de.qm</file>
         <file>translations/qt_de.qm</file>
-        <file>translations/en_us.qm</file>
-        <file>translations/ru_ru.qm</file>
+        <file alias="translations/en_US.qm">translations/en_us.qm</file>
+        <file alias="translations/ru_RU.qm">translations/ru_ru.qm</file>
         <file>translations/qt_ru.qm</file>
-        <file>translations/zh_cn.qm</file>
+        <file alias="translations/zh_CN.qm">translations/zh_cn.qm</file>
         <file>translations/qt_zh_CN.qm</file>
-        <file>translations/ja_jp.qm</file>
+        <file alias="translations/ja_JP.qm">translations/ja_jp.qm</file>
         <file>translations/qt_ja.qm</file>
     </qresource>
 </RCC>
