Set value for empty tags that should provide a default value.
Task-number: QTIFW-541
Change-Id: Ib899d87be75baaa96b3b15d8a94f660c1a6544e0
Reviewed-by: Kai Koehne <kai.koehne@digia.com>

--- a/tests/auto/installer/settings/settings.qrc
+++ b/tests/auto/installer/settings/settings.qrc
@@ -6,5 +6,6 @@
         <file>data/minimal_config.xml</file>
         <file>data/tutorial_config.xml</file>
         <file>data/unknown_element_config.xml</file>
+        <file>data/minimal_config_tag_defaults.xml</file>
     </qresource>
 </RCC>
