Fix regression after porting to QJSEngine.
Setting a dynamic property of a dynamic page from JS doesn't have
any effect anymore, as the properties are not synced. Now we define
the property directly on the JavaScript object and connect it to
corresponding C++ page with static Qt properties.

Task-number: QTIFW-562
Change-Id: If95222a94ebee7f8bb455792eab96c5e9bc19b86
Reviewed-by: Niels Weber <niels.weber@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>

--- a/tests/auto/installer/scriptengine/scriptengine.qrc
+++ b/tests/auto/installer/scriptengine/scriptengine.qrc
@@ -4,5 +4,6 @@
         <file>data/component1.qs</file>
         <file>data/component2.qs</file>
         <file>data/broken_connect.qs</file>
+        <file>data/dynamicpage.qs</file>
     </qresource>
 </RCC>
