Allow spaces in RunProgramArguments
This changes the syntax of the RunProgramArguments entry in
the config.xml. <Argument> sub tags need to be used to specify
the RunProgramArguments now.

Task-number: QTIFW-227
Change-Id: Ife007bf660cdcf4ff5e8e31bb9bb5ac2e5037616
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@theqtcompany.com>
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>

--- a/tests/auto/installer/settings/settings.qrc
+++ b/tests/auto/installer/settings/settings.qrc
@@ -7,5 +7,7 @@
         <file>data/tutorial_config.xml</file>
         <file>data/unknown_element_config.xml</file>
         <file>data/minimal_config_tag_defaults.xml</file>
+        <file>data/unexpectedtag_config.xml</file>
+        <file>data/unexpectedattribute_config.xml</file>
     </qresource>
 </RCC>
