Remove country from most translations
If we provide an en_us translation only this won't be picked up
by users having configured 'en', or 'en_uk'. This also mirrors the
naming of the qt translations.

The exception is zh_CN though, because the difference between
simplified and traditional characters is big. I'm not sure whether
taiwanese people would rather prefer traditional characters or english.
For Qt we have both zh_CN and zh_TW, maybe we will get a zh_TW in the
future too...

Change-Id: I73490337aef8f54da14b6feca3a035e1e405d65b
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>

--- a/src/sdk/installerbase.qrc
+++ b/src/sdk/installerbase.qrc
@@ -1,10 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file alias="translations/de_DE.qm">translations/de_de.qm</file>
-        <file alias="translations/en_US.qm">translations/en_us.qm</file>
-        <file alias="translations/fr_FR.qm">translations/fr_fr.qm</file>
-        <file alias="translations/ja_JP.qm">translations/ja_jp.qm</file>
-        <file alias="translations/ru_RU.qm">translations/ru_ru.qm</file>
+        <file>translations/de.qm</file>
+        <file>translations/en.qm</file>
+        <file>translations/fr.qm</file>
+        <file>translations/ja.qm</file>
+        <file>translations/ru.qm</file>
         <file alias="translations/zh_CN.qm">translations/zh_cn.qm</file>
         <file>translations/qt_fr.qm</file>
         <file>translations/qt_de.qm</file>
