Fix the invocation order of entering() and page callback
Task-number: QTIFW-620
Change-Id: I1a40aae35dc1c259a96043a1056aa631bf7279b2
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>

--- a/tests/auto/installer/scriptengine/scriptengine.qrc
+++ b/tests/auto/installer/scriptengine/scriptengine.qrc
@@ -5,6 +5,7 @@
         <file>data/component2.qs</file>
         <file>data/broken_connect.qs</file>
         <file>data/dynamicpage.qs</file>
+        <file>data/enteringpage.qs</file>
         <file>data/form.ui</file>
         <file>data/userinterface.qs</file>
     </qresource>
