Added Italian translation
Change-Id: I7c5dbe0a5610dc9b7671d6db3f57c169096c7ef2
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>

--- a/src/sdk/installerbase.qrc
+++ b/src/sdk/installerbase.qrc
@@ -3,6 +3,7 @@
         <file>translations/de.qm</file>
         <file>translations/en.qm</file>
         <file>translations/fr.qm</file>
+        <file>translations/it.qm</file>
         <file>translations/ja.qm</file>
         <file>translations/ru.qm</file>
         <file>translations/pl.qm</file>
@@ -13,5 +14,6 @@
         <file>translations/qt_pl.qm</file>
         <file alias="translations/qt_ru.qm">translations/qtbase_ru.qm</file>
         <file>translations/qt_zh_CN.qm</file>
+        <file alias="translations/qt_it.qm">translations/qtbase_it.qm</file>
     </qresource>
 </RCC>
