Fix spanish language import name
Spanish language was imported as name qtbase_es.qm. As it is not found
under Qt translations, all other translations were skipped to.

Change-Id: I093e72abf7385ca7926d61a14225e3254c1c1fbd
Task-number: QTIFW-791
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>

--- a/src/sdk/installerbase.qrc
+++ b/src/sdk/installerbase.qrc
@@ -16,6 +16,6 @@
         <file alias="translations/qt_ru.qm">translations/qtbase_ru.qm</file>
         <file>translations/qt_zh_CN.qm</file>
         <file alias="translations/qt_it.qm">translations/qtbase_it.qm</file>
-        <file alias="translations/qt_es.qm">translations/qtbase_es.qm</file>
+        <file>translations/qt_es.qm</file>
     </qresource>
 </RCC>
