Add unit tests for CLI option installPackages
Also remove extra space and quotation marks from print output

Change-Id: I18eb3532ac79f407023e15ef7ebab78ca0a7f59e
Reviewed-by: Iikka Eklund <iikka.eklund@qt.io>

--- a/tests/auto/installer/cliinterface/settings.qrc
+++ b/tests/auto/installer/cliinterface/settings.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>data/config.xml</file>
         <file>data/repository/Updates.xml</file>
+        <file>data/uninstallableComponentsRepository/Updates.xml</file>
     </qresource>
     <qresource prefix="/metadata">
         <file>installer-config/config.xml</file>
