CLI: Add unit tests and more detailed debug info of local installed packages
Change-Id: I37f0950686aeb303328d7e8137fc4c7cfe7e8840
Reviewed-by: Iikka Eklund <iikka.eklund@qt.io>

--- a/tests/auto/installer/cliinterface/settings.qrc
+++ b/tests/auto/installer/cliinterface/settings.qrc
@@ -3,6 +3,7 @@
         <file>data/config.xml</file>
         <file>data/repository/Updates.xml</file>
         <file>data/uninstallableComponentsRepository/Updates.xml</file>
+        <file>data/components.xml</file>
     </qresource>
     <qresource prefix="/metadata">
         <file>installer-config/config.xml</file>
