--- a/tests/auto/installer/messageboxhandler/settings.qrc
+++ b/tests/auto/installer/messageboxhandler/settings.qrc
@@ -7,5 +7,7 @@
         <file>data/invalidoperation/A/1.0.2-1meta.7z</file>
         <file>data/missingarchive/Updates.xml</file>
         <file>data/missingarchive/C/1.0.0content.7z.sha1</file>
+        <file>data/messagebox/Updates.xml</file>
+        <file>data/messagebox/A/1.0.2-1meta.7z</file>
     </qresource>
 </RCC>
