--- a/tests/auto/installer/cliinterface/settings.qrc
+++ b/tests/auto/installer/cliinterface/settings.qrc
@@ -19,6 +19,8 @@
         <file>data/installPackagesRepository/componentF.subcomponent1.subsubcomponent2/1.0.0content.7z</file>
         <file>data/installPackagesRepository/componentF.subcomponent2.subsubcomponent1/1.0.0content.7z</file>
         <file>data/installPackagesRepository/componentF.subcomponent2.subsubcomponent2/1.0.0content.7z</file>
+        <file>data/filequeryrepository/Updates.xml</file>
+        <file>data/filequeryrepository/A/1.0.2-1meta.7z</file>
         <file>data/componentsFromInstallPackagesRepository.xml</file>
     </qresource>
 </RCC>
