--- a/tests/auto/tools/repotest/settings.qrc
+++ b/tests/auto/tools/repotest/settings.qrc
@@ -20,16 +20,16 @@
         <file>repository_componentAndUnite/A/2.0.0content.7z</file>
         <file>repository_componentAndUnite/A/2.0.0content.7z.sha1</file>
         <file>repository_componentAndUnite/A/2.0.0meta.7z</file>
-        <file>repository_componentAndUnite/B/1.0.0content.7z</file>
-        <file>repository_componentAndUnite/B/1.0.0content.7z.sha1</file>
-        <file>repository_componentAndUnite/B/1.0.0meta.7z</file>
-        <file>repository_componentAndUnite/2020-10-13-0958_meta.7z</file>
+        <file>repository_componentAndUnite/C/1.0.0content.7z</file>
+        <file>repository_componentAndUnite/C/1.0.0content.7z.sha1</file>
+        <file>repository_componentAndUnite/C/1.0.0meta.7z</file>
+        <file>repository_componentAndUnite/2020-11-10-0816_meta.7z</file>
         <file>repository_componentAndUnite/Updates.xml</file>
         <file>repository_unite/A/2.0.0content.7z</file>
         <file>repository_unite/A/2.0.0content.7z.sha1</file>
-        <file>repository_unite/B/1.0.0content.7z</file>
-        <file>repository_unite/B/1.0.0content.7z.sha1</file>
-        <file>repository_unite/2020-10-13-0958_meta.7z</file>
+        <file>repository_unite/C/1.0.0content.7z</file>
+        <file>repository_unite/C/1.0.0content.7z.sha1</file>
+        <file>repository_unite/2020-11-10-0931_meta.7z</file>
         <file>repository_unite/Updates.xml</file>
     </qresource>
 </RCC>
