CLI: Fix offline installer creation with empty component meta-archive
Task-number: QTIFW-2189
Change-Id: Ic6f56156194039cca7bebf095fad8c1fc66fc275
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/tests/auto/installer/createoffline/settings.qrc
+++ b/tests/auto/installer/createoffline/settings.qrc
@@ -23,5 +23,10 @@
         <file>data/repository-unifiedmeta-script/Updates.xml</file>
         <file>data/repository-unifiedmeta-script/org.qtproject.ifw.example/1.0.0-1content.7z</file>
         <file>data/repository-unifiedmeta-script/org.qtproject.ifw.example/1.0.0-1content.7z.sha1</file>
+
+        <file>data/repository-componentmeta-emptymetafile/Updates.xml</file>
+        <file>data/repository-componentmeta-emptymetafile/A/1.0.2-1content.7z</file>
+        <file>data/repository-componentmeta-emptymetafile/A/1.0.2-1content.7z.sha1</file>
+        <file>data/repository-componentmeta-emptymetafile/A/1.0.2-1meta.7z</file>
     </qresource>
 </RCC>
