--- a/tests/auto/tools/repotest/settings.qrc
+++ b/tests/auto/tools/repotest/settings.qrc
@@ -31,5 +31,29 @@
         <file>repository_unite/C/1.0.0content.7z.sha1</file>
         <file>repository_unite/2020-11-10-0931_meta.7z</file>
         <file>repository_unite/Updates.xml</file>
+
+        <file>test_package_versions/repository_1/A/2.0.0content.7z</file>
+        <file>test_package_versions/repository_1/A/2.0.0content.7z.sha1</file>
+        <file>test_package_versions/repository_1/A/2.0.0meta.7z</file>
+        <file>test_package_versions/repository_1/B/1.0.0content.7z</file>
+        <file>test_package_versions/repository_1/B/1.0.0content.7z.sha1</file>
+        <file>test_package_versions/repository_1/B/1.0.0meta.7z</file>
+        <file>test_package_versions/repository_1/Updates.xml</file>
+
+        <file>test_package_versions/repository_2/A/1.0.0content.7z</file>
+        <file>test_package_versions/repository_2/A/1.0.0content.7z.sha1</file>
+        <file>test_package_versions/repository_2/A/1.0.0meta.7z</file>
+        <file>test_package_versions/repository_2/B/1.0.0content.7z</file>
+        <file>test_package_versions/repository_2/B/1.0.0content.7z.sha1</file>
+        <file>test_package_versions/repository_2/B/1.0.0meta.7z</file>
+        <file>test_package_versions/repository_2/Updates.xml</file>
+
+        <file>test_package_versions/repository_3/A/1.0.0content.7z</file>
+        <file>test_package_versions/repository_3/A/1.0.0content.7z.sha1</file>
+        <file>test_package_versions/repository_3/A/1.0.0meta.7z</file>
+        <file>test_package_versions/repository_3/B/3.0.0content.7z</file>
+        <file>test_package_versions/repository_3/B/3.0.0content.7z.sha1</file>
+        <file>test_package_versions/repository_3/B/3.0.0meta.7z</file>
+        <file>test_package_versions/repository_3/Updates.xml</file>
     </qresource>
 </RCC>
