--- a/tests/auto/tools/repotest/settings.qrc
+++ b/tests/auto/tools/repotest/settings.qrc
@@ -10,6 +10,8 @@
         <file>packages_update/A/meta/script2.0.0.qs</file>
         <file>packages_update/B/data/B_update.txt</file>
         <file>packages_update/B/meta/package.xml</file>
+        <file>packages_new/C/data/C.txt</file>
+        <file>packages_new/C/meta/package.xml</file>
         <file>repository_component/A/2.0.0content.7z</file>
         <file>repository_component/A/2.0.0content.7z.sha1</file>
         <file>repository_component/A/2.0.0meta.7z</file>
