Enable handling 7z archives with libarchive
Make libarchive the default handler for 7z archives if the IFW
tools were built with the 'libarchive' configuration feature.
The LZMA SDK library is still built and can be used instead
if the config feature is omitted.

Also modify tests.

Task-number: QTIFW-2375
Change-Id: I1091d5fa140cbd783cddecc595f35c6562639b07
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/tests/auto/installer/libarchivearchive/data.qrc
+++ b/tests/auto/installer/libarchivearchive/data.qrc
@@ -4,5 +4,6 @@
         <file>data/valid.tar.gz</file>
         <file>data/valid.tar.bz2</file>
         <file>data/valid.tar.xz</file>
+        <file>data/valid.7z</file>
     </qresource>
 </RCC>
