--- a/tests/auto/installer/extractarchiveoperationtest/data.qrc
+++ b/tests/auto/installer/extractarchiveoperationtest/data.qrc
@@ -4,6 +4,10 @@
         <file>data/invalid.7z</file>
         <file>data/xmloperationrepository/Updates.xml</file>
         <file>data/xmloperationrepository/A/1.0.0content.7z</file>
+        <file>data/xmloperationrepository/A/1.0.0content1.tar.gz</file>
+        <file>data/xmloperationrepository/A/1.0.0content2.tar.bz2</file>
+        <file>data/xmloperationrepository/A/1.0.0content3.tar.xz</file>
+        <file>data/xmloperationrepository/A/1.0.0content4.zip</file>
         <file>data/xmloperationrepository/A/1.0.0anothercontent.7z</file>
         <file>data/xmloperationrepository/A/1.0.0default.7z</file>
     </qresource>
