--- a/tests/auto/installer/treename/settings.qrc
+++ b/tests/auto/installer/treename/settings.qrc
@@ -21,6 +21,43 @@
         <file>data/repository/componentC/1.0.0content.7z</file>
         <file>data/repository/componentD/1.0.0meta.7z</file>
         <file>data/repository/componentD/1.0.0content.7z</file>
+
         <file>data/invalid_repository/Updates.xml</file>
+
+        <file>data/repository_children/componentA/1.0.0content.7z</file>
+        <file>data/repository_children/componentA/1.0.0meta.7z</file>
+        <file>data/repository_children/componentA.subcomponent1/1.0.0content.7z</file>
+        <file>data/repository_children/componentA.subcomponent1/1.0.0meta.7z</file>
+        <file>data/repository_children/componentB/1.0.0content.7z</file>
+        <file>data/repository_children/componentB/1.0.0meta.7z</file>
+        <file>data/repository_children/componentE/1.0.0content.7z</file>
+        <file>data/repository_children/componentE/1.0.0meta.7z</file>
+        <file>data/repository_children/componentF/1.0.0content.7z</file>
+        <file>data/repository_children/componentF/1.0.0meta.7z</file>
+        <file>data/repository_children/componentF.subcomponent1/1.0.0content.7z</file>
+        <file>data/repository_children/componentF.subcomponent1/1.0.0meta.7z</file>
+        <file>data/repository_children/componentF.subcomponent1.subsubcomponent1/1.0.0content.7z</file>
+        <file>data/repository_children/componentF.subcomponent1.subsubcomponent1/1.0.0meta.7z</file>
+        <file>data/repository_children/componentF.subcomponent1.subsubcomponent2/1.0.0content.7z</file>
+        <file>data/repository_children/componentF.subcomponent1.subsubcomponent2/1.0.0meta.7z</file>
+        <file>data/repository_children/componentF.subcomponent2/1.0.0content.7z</file>
+        <file>data/repository_children/componentF.subcomponent2/1.0.0meta.7z</file>
+        <file>data/repository_children/componentF.subcomponent2.subsubcomponent1/1.0.0content.7z</file>
+        <file>data/repository_children/componentF.subcomponent2.subsubcomponent1/1.0.0meta.7z</file>
+        <file>data/repository_children/componentF.subcomponent2.subsubcomponent2/1.0.0content.7z</file>
+        <file>data/repository_children/componentF.subcomponent2.subsubcomponent2/1.0.0meta.7z</file>
+        <file>data/repository_children/componentH/1.0.0content.7z</file>
+        <file>data/repository_children/componentH/1.0.0meta.7z</file>
+        <file>data/repository_children/componentH.subcomponent1/1.0.0content.7z</file>
+        <file>data/repository_children/componentH.subcomponent1/1.0.0meta.7z</file>
+        <file>data/repository_children/componentI.subcomponent2/1.0.0content.7z</file>
+        <file>data/repository_children/componentI.subcomponent2/1.0.0meta.7z</file>
+        <file>data/repository_children/componentJ/1.0.0content.7z</file>
+        <file>data/repository_children/componentJ/1.0.0meta.7z</file>
+        <file>data/repository_children/componentJ.subcomponent1/1.0.0content.7z</file>
+        <file>data/repository_children/componentJ.subcomponent1/1.0.0meta.7z</file>
+        <file>data/repository_children/componentK/1.0.0content.7z</file>
+        <file>data/repository_children/componentK/1.0.0meta.7z</file>
+        <file>data/repository_children/Updates.xml</file>
     </qresource>
 </RCC>
