Do not replace conflicting remote packages silently with locals
On (tree)name conflicts with other than the same component in local and
remote packages - instead of silently replacing the remote package with
local, do one of the following:

- Remote package A may have declared the same tree name as installed
  local package B. Catch the case and re-register package A as an
  unstable component with the original name, if possible.

- Remote package A may have declared a tree name that conflicts with
  local package B's name. Do not register component A.

Change-Id: I16ac583ea10bf203d8b8d0b19e6890f03cf0067a
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/tests/auto/installer/treename/settings.qrc
+++ b/tests/auto/installer/treename/settings.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
+        <file>data/components.xml</file>
+
         <file>data/repository/Updates.xml</file>
         <file>data/repository/componentA/1.0.0meta.7z</file>
         <file>data/repository/componentA/1.0.0content.7z</file>
