ArchiveFactory: register handlers for .qbsp file extension
QBSP archives were missing a handler which caused UnzipArchiveTask
to fail when fetching metadata. Also fix the resulted segfault in
UnzipArchiveTask::doTask() when ArchiveFactory::create() returns nullptr
for unknown file extension - it now handles the exception properly.

Task-number: QTIFW-2475
Change-Id: I72624763a06d6e7495daebd69970a5f22a4fd6d3
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/tests/auto/installer/libarchivearchive/data.qrc
+++ b/tests/auto/installer/libarchivearchive/data.qrc
@@ -5,5 +5,6 @@
         <file>data/valid.tar.bz2</file>
         <file>data/valid.tar.xz</file>
         <file>data/valid.7z</file>
+        <file>data/valid.qbsp</file>
     </qresource>
 </RCC>
