Fix replaced component uninstall
Replaced component was uninstalled when installing other components
although no update or install was requested to the component. Fixes also
a bug when some components were uninstalled unvisible from user.

Task-number: QTIFW-2577
Change-Id: I6a7e9ce4a56991dfbdea53eb376d782dfb5d050a
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/tests/auto/installer/componentreplace/settings.qrc
+++ b/tests/auto/installer/componentreplace/settings.qrc
@@ -5,6 +5,7 @@
         <file>data/installPackagesRepository/B/1.0.0content.7z</file>
         <file>data/installPackagesRepository/A.sub1/1.0.0content.7z</file>
         <file>data/installPackagesRepository/B.sub1/1.0.0content.7z</file>
+        <file>data/installPackagesRepository/C/1.0.0content.7z</file>
         <file>data/repositoryWithReplace/Updates.xml</file>
         <file>data/repositoryWithReplace/A/1.0.0content.7z</file>
         <file>data/repositoryWithReplace/B/2.0.0content.7z</file>
@@ -25,5 +26,6 @@
         <file>data/repositoryWithMultiReplaceInUpdate/B/2.0.0content.7z</file>
         <file>data/repositoryWithMultiReplaceInUpdate/A.sub1/1.0.0content.7z</file>
         <file>data/repositoryWithMultiReplaceInUpdate/B.sub1/1.0.0content.7z</file>
+        <file>data/repositoryWithMultiReplaceInUpdate/C/2.0.0content.7z</file>
     </qresource>
 </RCC>
