Do not install new dependencies for installed components
If component is updated to repository, and new dependencies are added,
the dependencies should be installed only when fresh install to
component is made or the component is updated.
This change adds a new LocalDependencies value to component. It keeps
track of the dependencies the local installed packages has.

Fixes also a bug in uninstallecalculator, where we should also read the
dependencies from local installed packages instead of newly introduced
repositories.

Task-number: QTIFW-2624
Change-Id: I0557e5adf1e87c0a1238cc455cfb2c90f6b05c87
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/tests/auto/installer/cliinterface/settings.qrc
+++ b/tests/auto/installer/cliinterface/settings.qrc
@@ -21,6 +21,13 @@
         <file>data/installPackagesRepository/componentF.subcomponent1.subsubcomponent2/1.0.0content.7z</file>
         <file>data/installPackagesRepository/componentF.subcomponent2.subsubcomponent1/1.0.0content.7z</file>
         <file>data/installPackagesRepository/componentF.subcomponent2.subsubcomponent2/1.0.0content.7z</file>
+        <file>data/installPackagesDependencyChanged/Updates.xml</file>
+        <file>data/installPackagesDependencyChanged/componentA/2.0.0content.7z</file>
+        <file>data/installPackagesDependencyChanged/componentB/1.0.0content.7z</file>
+        <file>data/installPackagesDependencyChanged/componentC/1.0.0content.7z</file>
+        <file>data/installPackagesDependencyChanged/componentD/1.0.0content.7z</file>
+        <file>data/installPackagesDependencyChanged/componentF/1.0.0content.7z</file>
+        <file>data/installPackagesDependencyChanged/componentH/1.0.0content.7z</file>
         <file>data/filequeryrepository/Updates.xml</file>
         <file>data/filequeryrepository/A/1.0.2-1meta.7z</file>
         <file>data/componentsFromInstallPackagesRepository.xml</file>
