Windows: fix installation error with concurrent Extract operations
There was an issue with the Extract operations when using the same
"targetDir" argument for multiple archives. The DirectoryGuard object
creating the missing leading directories would occasionally run into
a race condition when multiple threads competed with creating the
directories.

Fix by adding installer specific implementation similar to
QDir::mkpath(), but which checks if the directory was created
elsewhere at every directory level. Also convert an existing similar
case with the Extract operation to use the new function.

Task-number: QTIFW-2752
Change-Id: I4451e931309edb536294314b11c903189dacf2f0
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/tests/auto/installer/extractarchiveoperationtest/data.qrc
+++ b/tests/auto/installer/extractarchiveoperationtest/data.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>data/valid.7z</file>
         <file>data/invalid.7z</file>
+        <file>data/subdirs.7z</file>
         <file>data/xmloperationrepository/Updates.xml</file>
         <file>data/xmloperationrepository/A/1.0.0content.7z</file>
         <file>data/xmloperationrepository/A/1.0.0content1.tar.gz</file>
