--- a/tests/auto/installer/commandlineinstall/settings.qrc
+++ b/tests/auto/installer/commandlineinstall/settings.qrc
@@ -14,6 +14,8 @@
         <file>data/installPackagesRepository/componentG/1.0.0content.7z</file>
         <file>data/installPackagesRepository/componentH/1.0.0content.7z</file>
         <file>data/installPackagesRepository/componentI/1.0.0content.7z</file>
+        <file>data/installPackagesRepository/componentJ/1.0.0content.7z</file>
+        <file>data/installPackagesRepository/componentJ/1.0.0meta.7z</file>
         <file>data/installPackagesRepository/componentG/1.0.0meta.7z</file>
         <file>data/installPackagesRepository/componentF.subcomponent1/1.0.0content.7z</file>
         <file>data/installPackagesRepository/componentF.subcomponent2/1.0.0content.7z</file>
